deyployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-challenge-gc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sre-challenge-gc
  template:
    metadata:
      labels:
        app: sre-challenge-gc
    spec:
      containers:
      - name: sre-challenge
        image: flakor/challenger:v1  
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: gcr
