service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-gc
  labels:
    app: sre-challenge-gc
spec:
  ports:
  - name: 5000-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: sre-challenge-gc
  type: LoadBalancer
  # Replace the value with the IP address you reserved
  loadBalancerIP: 34.136.109.140
